[BUGFIX]: set social icons alignment to right only in footer

--- a/felayout_t3kit/dev/styles/main/footer/footer.less
+++ b/felayout_t3kit/dev/styles/main/footer/footer.less
@@ -105,7 +105,7 @@
 // === Footer Social-icons==========
 // =================================
 @media (min-width: 992px) {
-    .frame-type-socialIcons .social-icons {
+    .footer .social-icons {
         padding: 0;
         text-align: right;
     }
